# rekordagent

./: .gitignore  CLAUDE_CODE_PROMPT.md  Cargo.toml  DECISIONS.md  JOURNAL.md  LICENSE  NOTICE  README.md  STATUS.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/desktop/: index.html  package.json  playwright.config.ts  tailwind.config.ts  vite.config.ts
apps/desktop/e2e/: cleanup.spec.ts  incoming-archive.spec.ts  rekordagent.spec.ts  smart-fixes.spec.ts
apps/desktop/src/: App.test.tsx  App.tsx  index.css  ipc.ts  main.tsx  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: audio.rs  claude_agent.rs  lib.rs  main.rs
apps/desktop/src/agent/: tools.test.ts  tools.ts  types.ts  useAgent.ts
apps/desktop/src/components/: AnalyticsView.tsx  ArchiveView.test.tsx  ArchiveView.tsx  AuditView.tsx  ChatPanel.test.tsx  ChatPanel.tsx  CleanupPanel.test.tsx  CleanupPanel.tsx  CustomTagsPanel.test.tsx  CustomTagsPanel.tsx  DiffReviewPanel.test.tsx  DiffReviewPanel.tsx  DuplicatesView.test.tsx  DuplicatesView.tsx  EmptyState.tsx  EnergyBar.test.tsx  EnergyBar.tsx  ErrorPanel.tsx  FilterChips.tsx  FilterDrawer.tsx  FirstRunWizard.test.tsx  FirstRunWizard.tsx  InboxView.tsx  IncomingView.test.tsx  IncomingView.tsx  PlaylistBrowser.tsx  PlaylistPanel.test.tsx  PlaylistPanel.tsx  RelocateBanner.tsx  SettingsPanel.test.tsx  SettingsPanel.tsx  SidebarNav.tsx  SmartFixesPanel.test.tsx  SmartFixesPanel.tsx  StatusBar.tsx  SyncPanel.test.tsx  SyncPanel.tsx  TagPickerModal.test.tsx  TagPickerModal.tsx  Toast.tsx  (+9 more)
apps/desktop/src/hooks/: useAudioPlayer.test.ts  useAudioPlayer.ts  useDialog.ts  useFilterContext.ts  useKeyboardShortcuts.tagpicker.test.tsx  useKeyboardShortcuts.test.ts  useKeyboardShortcuts.ts  useLibrary.ts  usePlaylists.ts  useStagedChanges.ts  useTrackContextActions.tsx  useTrackCues.ts  useWaveform.ts
apps/desktop/src/lib/: camelot.test.ts  camelot.ts  filters.test.ts  filters.ts  playlist-dedupe.test.ts  playlist-dedupe.ts  utils.ts
apps/desktop/src/store/: appStore.ts
apps/desktop/src/test/: setup.ts
apps/desktop/src/test-utils/: providers.tsx
crates/agent-tools/: Cargo.toml
crates/agent-tools/src/: http.rs  lib.rs  mcp.rs  service.rs  types.rs
crates/audio-analysis/: Cargo.toml
crates/audio-analysis/src/: lib.rs
crates/audio-tags/: Cargo.toml
crates/audio-tags/src/: lib.rs
crates/cache/: Cargo.toml
crates/cache/src/: lib.rs  migrations.rs  store.rs
crates/changes/: Cargo.toml
crates/changes/src/: applier.rs  key_format.rs  lib.rs
crates/changes/src/applier/: cues.rs  playlists.rs  tracks.rs
crates/classify/: Cargo.toml
crates/classify/src/: lib.rs
crates/decks-core/: Cargo.toml
crates/decks-core/src/: lib.rs
crates/embeddings/: Cargo.toml
crates/embeddings/src/: lib.rs
crates/enrichment/: Cargo.toml
crates/enrichment/src/: lib.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: lib.rs
crates/prodjlink/: Cargo.toml
crates/prodjlink/src/: lib.rs
crates/ranker/: Cargo.toml
crates/ranker/src/: lib.rs
crates/rekordbox-db/: Cargo.toml
crates/rekordbox-db/examples/: anlz_inventory.rs  seed_test_library.rs
crates/rekordbox-db/src/: anlz.rs  connection.rs  lib.rs  types.rs  write.rs
crates/rekordbox-db/src/queries/: analytics.rs  cues.rs  health.rs  mod.rs  playlists.rs  tracks.rs
crates/rekordbox-db/src/sql/: schema.sql  seed.sql
crates/rekordbox-db/tests/: anlz_waveform_tests.rs  integration.rs
crates/rekordbox-xml/: Cargo.toml
crates/rekordbox-xml/src/: emit.rs  lib.rs  parse.rs  types.rs  uri.rs
crates/rekordbox-xml/tests/: roundtrip.rs
crates/relocate/: Cargo.toml
crates/relocate/src/: lib.rs
crates/scoring/: Cargo.toml
crates/scoring/src/: lib.rs
crates/smart-fixes/: Cargo.toml
crates/smart-fixes/src/: lib.rs
crates/smart-fixes/src/fixes/: add_mix_parens.rs  casing.rs  encoded_chars.rs  extract_artist.rs  extract_remixer.rs  mod.rs  remove_common_text.rs  remove_garbage.rs  remove_number_prefix.rs  remove_promo.rs  remove_urls.rs  (+1 more)
crates/stratum-dsp/: Cargo.toml
crates/stratum-dsp/examples/: band_bleed_analysis.rs  band_bleed_real_audio.rs  dub_stab_real_audio.rs  run_dub_stab_batch.sh
crates/stratum-dsp/src/: config.rs  error.rs  lib.rs
crates/stratum-dsp/src/analysis/: confidence.rs  metadata.rs  mod.rs  result.rs
crates/stratum-dsp/src/features/: decay.rs  dub_stab.rs  mod.rs  modulation.rs
crates/stratum-dsp/src/features/beat_tracking/: bayesian.rs  hmm.rs  mod.rs  tempo_variation.rs  time_signature.rs
crates/stratum-dsp/src/features/chroma/: extractor.rs  mod.rs  normalization.rs  smoothing.rs
crates/stratum-dsp/src/features/key/: detector.rs  key_changes.rs  key_clarity.rs  mod.rs  templates.rs
crates/stratum-dsp/src/features/onset/: band.rs  consensus.rs  energy_flux.rs  hfc.rs  hpss.rs  mod.rs  spectral_flux.rs  threshold.rs
crates/stratum-dsp/src/features/period/: autocorrelation.rs  candidate_filter.rs  comb_filter.rs  mod.rs  multi_resolution.rs  novelty.rs  peak_picking.rs  tempogram.rs  tempogram_autocorr.rs  tempogram_fft.rs
crates/stratum-dsp/src/ml/: edge_cases.rs  mod.rs  onnx_model.rs  refinement.rs
crates/stratum-dsp/src/preprocessing/: channel_mixer.rs  mod.rs  normalization.rs  silence.rs
crates/stratum-dsp/tests/: integration_tests.rs
crates/track-matcher/: Cargo.toml
crates/track-matcher/src/: csv_input.rs  lib.rs  normalise.rs
crates/track-matcher/tests/: csv_roundtrip.rs
docs/: CLAUDE_CODE_PROMPT.md  DECISIONS.md  JOURNAL.md  MANUAL_TEST_PLAN.md  MCP.md  MVP_PLAN.md  UI_AUDIT.md  architecture.md  data-model.md  lexiconparityfeatures.md  tools.md  ui.md
docs/releases/: v0.1.0.md  v0.2.0.md
docs/superpowers/plans/: 2026-05-11-community-research.md  2026-05-11-high-impact-polish.md  2026-05-11-mcp-runtime-options.md  2026-05-12-community-feature-followups.md
scripts/: dev.sh  real-library-smoke.sh  release.sh  seed-test-library.sh
(+7 files in other folders)
