[package]
name = "decks-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "decks CLI — same subcommands as the desktop app, calling the same crates"

[[bin]]
name = "decks"
path = "src/main.rs"

[dependencies]
agent-tools = { path = "../../crates/agent-tools" }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
decks-core = { path = "../../crates/decks-core" }
