[package]
name = "agent-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
axum = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
decks-core = { path = "../decks-core" }
cache = { path = "../cache" }
changes = { path = "../changes" }
audio-tags = { path = "../audio-tags" }
audio-analysis = { path = "../audio-analysis" }
relocate = { version = "0.1.0", path = "../relocate" }

[dev-dependencies]
rusqlite = { version = "0.34", features = ["bundled-sqlcipher-vendored-openssl"] }
tempfile = "3"
