[package]
name = "audio-analysis"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "BPM, key, and audio feature extraction (stratum-dsp + Essentia bridge)"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
