[package]
name = "audio-analysis"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "BPM, key, and audio feature extraction (stratum-dsp + Essentia bridge)"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
stratum-dsp = { path = "../stratum-dsp" }
cache = { path = "../cache" }
symphonia = { version = "0.5", features = ["mp3", "flac", "aac", "wav", "pcm", "isomp4"] }
