[package]
name = "audio-tags"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Read/write ID3, MP4, and FLAC audio tags"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
lofty = "0.22"
