[package]
name = "cache"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Local SQLite WAL cache with schema versioning and sqlite-vec extension"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
rusqlite = { version = "0.34", features = ["bundled", "load_extension"] }

[dev-dependencies]
tempfile = "3"
