[package]
name = "changes"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Staged ChangeManager — accumulate, diff, and apply library changes"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
rusqlite = "0.34"
uuid = { version = "1.0", features = ["v4"] }
