[package]
name = "enrichment"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Discogs, MusicBrainz, Beatport, and Bandcamp metadata enrichment clients"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
