[package]
name = "plugins"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Deno-sandboxed user plugin host"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
