[package]
name = "ranker"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Learned pairwise transition ranker (LightGBM LambdaRank)"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
