[package]
name = "rekordbox-db"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Read-only SQLCipher access to the Rekordbox 7 master.db"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
rusqlite = { version = "0.34", features = ["bundled-sqlcipher-vendored-openssl"] }

[dev-dependencies]
tempfile = "3"
rusqlite = { version = "0.34", features = ["bundled-sqlcipher-vendored-openssl"] }
