[package]
name = "relocate"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
strsim = "0.11.1"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3"
