[package]
name = "scoring"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Transition scoring and beam-search set sequencer"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
