[package]
name = "decks-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "decks_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "decks-desktop"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
decks-core = { path = "../../../crates/decks-core" }

[build-dependencies]
tauri-build = { version = "2", features = [] }
