[package]
name = "decks-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "decks_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "decks-desktop"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rodio = { version = "0.19", features = ["symphonia-all"] }
keyring = "2"
decks-core = { path = "../../../crates/decks-core" }
cache = { path = "../../../crates/cache" }
changes = { path = "../../../crates/changes" }

[build-dependencies]
tauri-build = { version = "2", features = [] }
